public/error-test
C:\xampp\htdocs\colonel\storage\assignments\68\user_upload\tester\test.java:12: error: ';' expected
	int x2 = 0
	          ^
1 error
